build_log_settings_fix.txt
[  0%] Built target QtLingo_autogen_timestamp_deps
[  1%] Built target QtLingo_autogen
[ 11%] Built target QtLingo
[ 11%] Built target BGACore_autogen_timestamp_deps
[ 12%] Built target BGACore_autogen
[ 22%] Built target BGACore
[ 22%] Built target NST_autogen_timestamp_deps
[ 24%] Automatic MOC and UIC for target NST
[ 24%] Built target NST_autogen
[ 25%] Building CXX object CMakeFiles/NST.dir/plugins/LuaTranslationPlugin/luatranslationservice.cpp.o
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp: In static member function ‘static int LuaWorker::lua_get_setting(lua_State*)’:
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:226:5: warning: no return statement in function returning non-void [-Wreturn-type]
  226 |     }
      |     ^
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp: At global scope:
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:229:5: error: ‘settings’ does not name a type; did you mean ‘QSettings’?
  229 |     settings.beginGroup("Plugins");
      |     ^~~~~~~~
      |     QSettings
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:230:5: error: ‘settings’ does not name a type; did you mean ‘QSettings’?
  230 |     settings.beginGroup(currentScriptName);
      |     ^~~~~~~~
      |     QSettings
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:231:5: error: ‘settings’ does not name a type; did you mean ‘QSettings’?
  231 |     settings.beginGroup("Settings");
      |     ^~~~~~~~
      |     QSettings
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:233:35: error: ‘key’ was not declared in this scope; did you mean ‘key_t’?
  233 |     QVariant val = settings.value(key);
      |                                   ^~~
      |                                   key_t
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:234:5: error: ‘settings’ does not name a type; did you mean ‘QSettings’?
  234 |     settings.endGroup();
      |     ^~~~~~~~
      |     QSettings
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:235:5: error: ‘settings’ does not name a type; did you mean ‘QSettings’?
  235 |     settings.endGroup();
      |     ^~~~~~~~
      |     QSettings
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:236:5: error: ‘settings’ does not name a type; did you mean ‘QSettings’?
  236 |     settings.endGroup();
      |     ^~~~~~~~
      |     QSettings
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:238:5: error: expected unqualified-id before ‘if’
  238 |     if (val.isValid()) {
      |     ^~
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:240:7: error: expected unqualified-id before ‘else’
  240 |     } else {
      |       ^~~~
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:243:5: error: expected unqualified-id before ‘return’
  243 |     return 1;
      |     ^~~~~~
/home/jop/work/NST/NST/plugins/LuaTranslationPlugin/luatranslationservice.cpp:244:1: error: expected declaration before ‘}’ token
  244 | }
      | ^
gmake[2]: *** [CMakeFiles/NST.dir/build.make:336: CMakeFiles/NST.dir/plugins/LuaTranslationPlugin/luatranslationservice.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:265: CMakeFiles/NST.dir/all] Error 2
gmake: *** [Makefile:156: all] Error 2
